examples/invalid/if_else.lama
int i = 0;
i = i * 6
if i i++; 
else int i = 1;
print i;